<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/tomato"
            android:title="@string/menu_home_food" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/shopping"
            android:title="@string/menu_shopping_list" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/foodlist"
            android:title="@string/menu_food_info" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/question"
            android:title="@string/menu_instructions" />
    </group>

</menu>
